tests/ui/deprecation/issue-66340-deprecated-attr-non-meta-grammar.stderr
error: expected unsuffixed literal, found `test`
  --> $DIR/issue-66340-deprecated-attr-non-meta-grammar.rs:9:21
   |
LL | #[deprecated(note = test)]
   |                     ^^^^
   |
help: surround the identifier with quotation marks to make it into a string literal
   |
LL | #[deprecated(note = "test")]
   |                     +    +

warning: use of deprecated function `foo`
  --> $DIR/issue-66340-deprecated-attr-non-meta-grammar.rs:6:5
   |
LL |     foo()
   |     ^^^
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

